# dailo-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/accounts/: admin.py  helpers.py  models.py  tasks.py  tokens.py
app/accounts/migrations/: 0001_initial.py  0002_useraccount_role.py  0003_alter_useraccount_is_active_otpverification.py
app/accounts/v1/: serializers.py  urls.py  views.py
app/community/: admin.py  apps.py  models.py
app/community/migrations/: 0001_initial.py  0002_roommembership.py  0003_message.py
app/community/model/: membership.py  message.py  room.py
app/community/realtime/: consumers.py  routing.py
app/community/services/: membership_service.py  message_service.py  room_service.py
app/community/v1/: serializers.py  urls.py  views.py
app/creator/: admin.py  apps.py  models.py
app/creator/migrations/: 0001_initial.py  0002_creatorapplication_mobile_number_and_more.py
app/creator/v1/: serializers.py  urls.py  views.py
app/dashbaord/: apps.py
app/dashbaord/v1/: views.py
app/dashboard/services/: creator_approval_service.py
app/dashboard/v1/: filters.py  serializers.py  urls.py  views.py
app/feed/: apps.py
app/feed/selectors/: room_selector.py
app/feed/v1/: serializers.py  urls.py  views.py
app/notification/: apps.py
app/notification/migrations/: 0001_initial.py
config/: asgi.py  celery.py  urls.py  websocket_routes.py  ws_middleware.py
config/settings/: base.py  dev.py  prod.py
(+5 files in other folders)
